# sps-template-server/model/file_upload_and_download.go
@@ -1,0 +1,11 @@
+package model
+
+import "sps-template-server/global"
+
+type FileUploadAndDownload struct {
+	global.SdModel
+	Name string `json:"name" gorm:"comment:文件名"`
+	Url  string `json:"url" gorm:"comment:文件地址"`
+	Tag  string `json:"tag" gorm:"comment:文件标签"`
+	Key  string `json:"key" gorm:"comment:编号"`
+}
