# sps-template-server/model/response/FileResponse.go
@@ -1,0 +1,7 @@
+package response
+
+import "sps-template-server/model"
+
+type FileResponse struct {
+	File model.FileUploadAndDownload `json:"file"`
+}
